# alpha_hook

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
include/: main.hpp
shared/: alpha_hook.hpp  hooking.hpp  il2cpp_utils.hpp
src/: alpha_hook.cpp  il2cpp_utils.cpp  main.cpp
